added CSS to index page

--- a/templates/springClasses.html
+++ b/templates/springClasses.html
@@ -4,6 +4,13 @@
             <title>
                 Spring 2020 Classes
             </title>
+
+            <style>
+                table, tr, td {
+                     border: 1px solid black;
+                }
+            </style>
+
         </head>
 
         <body>
