--- a/static/css/singlePageTemplate.css
+++ b/static/css/singlePageTemplate.css
@@ -210,7 +210,7 @@ footer .footer_column p {
 	margin-right: 20px;
 }
 .button {
-	width: 200px;
+	width: 100%;
 	margin-top: 40px;
 	margin-right: auto;
 	margin-bottom: auto;
@@ -226,12 +226,13 @@ footer .footer_column p {
 	font-weight: bold;
 	letter-spacing: 2px;
 	border: 3px solid #FFFFFF;
+	background-color: #1f4068;
 	color: #FFFFFF;
 	transition: all 0.3s linear;
 }
 .button:hover {
-	background-color: #FEFEFE;
-	color: #C4C4C4;
+	background-color: #1f4068;
+	color: #000000;
 	cursor: pointer;
 }
 .copyright {
@@ -278,8 +279,6 @@ footer {
 	width: 100%;
 	float: none;
 	display: none;
-}
-header nav ul {
 }
 nav ul li {
 	margin-top: 0px;
