added nipsey project notebook

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,7 @@
 <title>Home</title>
 <link href="/static/css/singlePageTemplate.css" rel="stylesheet" type="text/css">
 <!--The following script tag downloads a font from the Adobe Edge Web Fonts server for use within the web page. We recommend that you do not modify it.-->
-<script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 <body>
 <!-- Main Container -->
@@ -31,10 +24,9 @@
   </section>
   <!-- About Section -->
   <section class="about" id="about">
-    <h2 class="hidden">About</h2>
-    <p class="text_column"><button class="button">CLASSES</button></p>
-    <p class="text_column"><button class="button">CLASSES</button></p>
-    <p class="text_column"><button class="button">CLASSES</button></p>
+    <a href="/classes"><button>CLASSES</button></a>
+    <a href="1006.html"></a><button>CLASSES</button></a>
+    <a href="www.youtube.com"><button class="buttonmode">BONUS</button></a>
   </section>
 </div>
 <!-- Main Container Ends -->
