--- a/static/css/singlePageTemplate.css
+++ b/static/css/singlePageTemplate.css
@@ -2,7 +2,11 @@
 /* Body */
 body {
 	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
-	background-color: #f2f2f2;
+	background: rgb(13,21,41);
+	background: -moz-linear-gradient(0deg, rgba(13,21,41,1) 0%, rgba(22,36,71,1) 47%);
+	background: -webkit-linear-gradient(0deg, rgba(13,21,41,1) 0%, rgba(22,36,71,1) 47%);
+	background: linear-gradient(0deg, rgba(13,21,41,1) 0%, rgba(22,36,71,1) 47%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0d1529",endColorstr="#162447",GradientType=1);
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
@@ -16,7 +20,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	height: 1000px;
-	background-color: #FFFFFF;
+	background-color: rgba(255, 255, 255, 0);
 }
 /* Navigation */
 header {
@@ -35,33 +39,7 @@ header {
 	margin-left: 25px;
 	letter-spacing: 4px;
 }
-nav {
-	float: right;
-	width: 50%;
-	text-align: right;
-	margin-right: 25px;
-}
-header nav ul {
-	list-style: none;
-	float: right;
-}
-nav ul li {
-	float: left;
-	color: #FFFFFF;
-	font-size: 14px;
-	text-align: left;
-	margin-right: 25px;
-	letter-spacing: 2px;
-	font-weight: bold;
-	transition: all 0.3s linear;
-}
-ul li a {
-	color: #FFFFFF;
-	text-decoration: none;
-}
-ul li:hover a {
-	color: #2C9AB7;
-}
+
 .hero_header {
 	color: #FFFFFF;
 	text-align: center;
@@ -90,22 +68,11 @@ ul li:hover a {
 	letter-spacing: 1px;
 }
 /* About Section */
-.text_column {
-	width: 29%;
-	text-align: justify;
-	font-weight: lighter;
-	line-height: 25px;
-	float: left;
-	padding-left: 20px;
-	padding-right: 20px;
-	color: #A3A3A3;
-}
 .about {
-	padding-left: 25px;
-	padding-right: 25px;
-	padding-top: 35px;
+	text-align: center;
+	color: white;
+	width: 100%;
 	display: inline-block;
-	background-color: #FFFFFF;
 	margin-top: 0px;
 }
 /* Stats Gallery */
@@ -113,39 +80,7 @@ ul li:hover a {
 	color: #717070;
 	margin-bottom: 5px;
 }
-.gallery {
-	clear: both;
-	display: inline-block;
-	width: 100%;
-	background-color: #FFFFFF;
-	/* [disabled]min-width: 400px;
-*/
-	padding-bottom: 35px;
-	padding-top: 0px;
-	margin-top: -5px;
-	margin-bottom: 0px;
-}
-.thumbnail {
-	width: 25%;
-	text-align: center;
-	float: left;
-	margin-top: 35px;
-}
-.gallery .thumbnail h4 {
-	margin-top: 5px;
-	margin-right: 5px;
-	margin-bottom: 5px;
-	margin-left: 5px;
-	color: #52BAD5;
-}
-.gallery .thumbnail p {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	color: #A3A3A3;
-}
-/* Parallax Section */
+
 .banner {
 	background-color: #2D9AB7;
 	background-image: url(../images/parallax.png);
@@ -154,27 +89,7 @@ ul li:hover a {
 	background-size: cover;
 	background-repeat: no-repeat;
 }
-.parallax {
-	color: #FFFFFF;
-	text-align: right;
-	padding-right: 100px;
-	padding-top: 110px;
-	letter-spacing: 2px;
-	margin-top: 0px;
-}
-.parallax_description {
-	color: #FFFFFF;
-	text-align: right;
-	padding-right: 100px;
-	width: 30%;
-	float: right;
-	font-weight: lighter;
-	line-height: 23px;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-}
+
 /* More info */
 footer {
 	background-color: #FFFFFF;
@@ -209,30 +124,20 @@ footer .footer_column p {
 	margin-left: 20px;
 	margin-right: 20px;
 }
-.button {
-	width: 100%;
-	margin-top: 40px;
-	margin-right: auto;
-	margin-bottom: auto;
-	margin-left: auto;
-	padding-top: 20px;
-	padding-right: 10px;
-	padding-bottom: 20px;
-	padding-left: 10px;
-	text-align: center;
-	vertical-align: middle;
-	border-radius: 0px;
-	text-transform: uppercase;
-	font-weight: bold;
-	letter-spacing: 2px;
-	border: 3px solid #FFFFFF;
+button {
 	background-color: #1f4068;
-	color: #FFFFFF;
+	color:#FFFFFF;
+	border: 3px solid #ffffff;	
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	position: inherit;
+	font-size: 16px;	
 	transition: all 0.3s linear;
 }
-.button:hover {
-	background-color: #1f4068;
-	color: #000000;
+button:hover {
+	border: 3px solid #000000;
 	cursor: pointer;
 }
 .copyright {
