Finished Backend in Flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,9 @@
   </section>
   <!-- About Section -->
   <section class="about" id="about">
-    <a href="/classes"><button>CLASSES</button></a>
-    <a href="1006.html"></a><button>CLASSES</button></a>
-    <a href="www.youtube.com"><button class="buttonmode">BONUS</button></a>
+    <a href="/classes"><button>Classes</button></a>
+    <a href="/billboard"><button>Billboard Search</button></a>
+    <a href="https://www.youtube.com"><button class="buttonmode">BONUS</button></a>
   </section>
 </div>
 <!-- Main Container Ends -->
