--- a/templates/billboardsearch.html
+++ b/templates/billboardsearch.html
@@ -5,14 +5,65 @@
 
         <style>
             body{
+                
+                font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+                background: rgb(142,197,252);
+                background: -moz-linear-gradient(0deg, rgba(142,197,252,1) 0%, rgba(224,195,252,1) 100%);
+                background: -webkit-linear-gradient(0deg, rgba(142,197,252,1) 0%, rgba(224,195,252,1) 100%);
+                background: linear-gradient(0deg, rgba(142,197,252,1) 0%, rgba(224,195,252,1) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#8ec5fc",endColorstr="#e0c3fc",GradientType=1);
+                background-size: cover;
+                background-repeat: no-repeat;                
+                text-align: center;
+                color: #ffffff;
                 margin: 0;
-                background-color: beige;
+                overflow: hidden;
+                
             }
             input {
+                display: inline-block;
+                position: inherit;
+                border: 5px solid black;
+                border-radius: 4px;
                 width: 100%;
+                height: 1em;
+                font-size: 8em;
+                text-align: center;
+                transition: 0.4s ease-in-out;
+                padding: 10px;
             }
+            input:focus {
+                border: 5px solid #555;
+            }
+            ::placeholder{
+                color: #e6e6e6;
+            }
+            button{
+                margin-top: 1em;
+                border: 5px solid black;
+                border-radius: 4%;
+                color: white;
+                background-color: transparent;
+                padding: 16px 32px;
+                text-decoration: none;
+                font-size: 2em;
+                cursor: pointer;
+                transition: .4s;
+            }
+            button:hover{
+                background-color: #ffffff6c;
+                color: #000000;
+            }            
             #main{
-                width: 80%;
+                margin-left: 25%;
+                margin-right: 25%;
+                margin-top: 10%;
+                margin-bottom: 25%;
+                text-align: center;
+                width: 50%;
+            }
+            #title{
+                font-size: 5em;
             }
         </style>
     </head>
@@ -20,8 +71,9 @@
     <body>
         <section>
             <div id="main">
-                <form>
-                    <input type="text" id="word" name="word">
+                <p id="title">HOW MANY TIMES HAS "{{word}}" BEEN USED? {{num}}</p>
+                <form action="/billboard" method="POST">
+                    <input type="text" id="word" name="word" placeholder={{word}}>
                     <button>
                         Search
                     </button>
