--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
   <section class="about" id="about">
     <a href="/classes"><button>Classes</button></a>
     <a href="/billboard"><button>Billboard Search</button></a>
-    <a href="https://www.youtube.com"><button class="buttonmode">BONUS</button></a>
+    <a href="https://youtu.be/LDU_Txk06tM?t=74"><button class="buttonmode">Feeling Lucky?</button></a>
   </section>
 </div>
 <!-- Main Container Ends -->
