--- a/templates/billboardsearch.html
+++ b/templates/billboardsearch.html
@@ -71,14 +71,20 @@
     <body>
         <section>
             <div id="main">
-                <p id="title">HOW MANY TIMES HAS "{{word}}" BEEN USED? {{num}}</p>
+                <p id="title">HOW MANY TIMES HAS "{{word}}" BEEN USED? {{num}} </p>
                 <form action="/billboard" method="POST">
                     <input type="text" id="word" name="word" placeholder={{word}}>
                     <button>
                         Search
                     </button>
                 </form>
+                <p style="font-size: 1em;">Have you ever wondered how many times a certain word has been used in a Billboard HOT-100 song? (Specifically between April-2019 to March-2020) Search the word and find out.</p>
             </div>
+
+            <div id="main">
+                
+            </div>            
+            
         </section>
     </body>
 </html>
